--- a/KagamaAdmin/Views/Home/Review.cshtml
+++ b/KagamaAdmin/Views/Home/Review.cshtml
@@ -1,16 +1,157 @@
 ﻿@model KagamaAdmin.ViewModel.ReviewView
+<div class="reviews-main">
+    <div class="reviews">
+        <div class="slide">
+            <div class="info">
+                <div class="name">Валерий</div>
+                <div class="city_name">г. Москва</div>
+            </div>
+            <div class="info">
+                <div class="rate">
+                    <img src="~/client/img/fullfilled.png" />
+                    <img src="~/client/img/fullfilled.png" />
+                    <img src="~/client/img/fullfilled.png" />
+                    <img src="~/client/img/fullfilled.png" />
+                    <img src="~/client/img/empty.png" />
+                </div>
+                <div class="date">20.12.21</div>
+            </div>
+            <div class="description">
+                В феврале – марте 2003 г. в распределительном складском комплексе торговой сети , расположенном по адресу: МО, Балашихинский 
+                р-он, г. Железнодорожный, силами ООО «ТэоХим» были выполнены работы по устройству защитного покрытия полов полиуретановой композицией «Элакор-ПУ», площадь – 15 600 м².
 
-<div id="mainLead"  class="review_page_content main-lead">
-    <div class="wrapper">
-        <div class="flex-input">
+                Замечаний по срокам и качеству проводившихся работ нет.
+
+                За истекший период, покрытие «Элакор-ПУ» показало хорошие эксплуатационные свойства.
+
+                Претензий по качеству нет.
+            </div>
+            <div class="image_desc">
+                <img src="~/client/img/desc1.png" />
+                <img src="~/client/img/desc2.png" />
+            </div>
+        </div><div class="slide">
+            <div class="info">
+                <div class="name">Валерий</div>
+                <div class="city_name">г. Москва</div>
+            </div>
+            <div class="info">
+                <div class="rate">
+                    <img src="~/client/img/fullfilled.png" />
+                    <img src="~/client/img/fullfilled.png" />
+                    <img src="~/client/img/fullfilled.png" />
+                    <img src="~/client/img/fullfilled.png" />
+                    <img src="~/client/img/empty.png" />
+                </div>
+                <div class="date">20.12.21</div>
+            </div>
+            <div class="description">
+                В феврале – марте 2003 г. в распределительном складском комплексе торговой сети , расположенном по адресу: МО, Балашихинский 
+                р-он, г. Железнодорожный, силами ООО «ТэоХим» были выполнены работы по устройству защитного покрытия полов полиуретановой композицией «Элакор-ПУ», площадь – 15 600 м².
+
+                Замечаний по срокам и качеству проводившихся работ нет.
+
+                За истекший период, покрытие «Элакор-ПУ» показало хорошие эксплуатационные свойства.
+
+                Претензий по качеству нет.
+            </div>
+            <div class="image_desc">
+                <img src="~/client/img/desc1.png" />
+                <img src="~/client/img/desc2.png" />
+            </div>
+        </div>
+        <div class="slide">
+            <div class="info">
+                <div class="name">Валерий</div>
+                <div class="city_name">г. Москва</div>
+            </div>
+            <div class="info">
+                <div class="rate">
+                    <img src="~/client/img/fullfilled.png" />
+                    <img src="~/client/img/fullfilled.png" />
+                    <img src="~/client/img/fullfilled.png" />
+                    <img src="~/client/img/fullfilled.png" />
+                    <img src="~/client/img/empty.png" />
+                </div>
+                <div class="date">20.12.21</div>
+            </div>
+            <div class="description">
+                В феврале – марте 2003 г. в распределительном складском комплексе торговой сети , расположенном по адресу: МО, Балашихинский 
+                р-он, г. Железнодорожный, силами ООО «ТэоХим» были выполнены работы по устройству защитного покрытия полов полиуретановой композицией «Элакор-ПУ», площадь – 15 600 м².
+
+                Замечаний по срокам и качеству проводившихся работ нет.
+
+                За истекший период, покрытие «Элакор-ПУ» показало хорошие эксплуатационные свойства.
+
+                Претензий по качеству нет.
+            </div>
+            <div class="image_desc">
+                <img src="~/client/img/desc1.png" />
+                <img src="~/client/img/desc2.png" />
+            </div>
+        </div>
+        <div class="slide">
+            <div class="info">
+                <div class="name">Валерий</div>
+                <div class="city_name">г. Москва</div>
+            </div>
+            <div class="info">
+                <div class="rate">
+                    <img src="~/client/img/fullfilled.png" />
+                    <img src="~/client/img/fullfilled.png" />
+                    <img src="~/client/img/fullfilled.png" />
+                    <img src="~/client/img/fullfilled.png" />
+                    <img src="~/client/img/empty.png" />
+                </div>
+                <div class="date">20.12.21</div>
+            </div>
+            <div class="description">
+                В феврале – марте 2003 г. в распределительном складском комплексе торговой сети , расположенном по адресу: МО, Балашихинский 
+                р-он, г. Железнодорожный, силами ООО «ТэоХим» были выполнены работы по устройству защитного покрытия полов полиуретановой композицией «Элакор-ПУ», площадь – 15 600 м².
+
+                Замечаний по срокам и качеству проводившихся работ нет.
+
+                За истекший период, покрытие «Элакор-ПУ» показало хорошие эксплуатационные свойства.
+
+                Претензий по качеству нет.
+            </div>
+            <div class="image_desc">
+                <img src="~/client/img/desc1.png" />
+                <img src="~/client/img/desc2.png" />
+            </div>
+        </div>
+    </div>
+</div>
+<div id="mainLead" class="review_page_content main-lead" style="background-color:#E5E5E5">
+    <div class="wrapper lead">
+        
+        <div class="form">
+            <h1>Оставить отзыв</h1>
+            <div class="flex-input">
                 <div class="@(ViewData.ModelState["Name"]?.Errors.Count > 0 ? "input error" : "input")">
                     <input type="text" placeholder="Имя" asp-for="Name">
                     <i class="required">*</i>
                 </div>
-                <div class="@(ViewData.ModelState["Email"]?.Errors.Count > 0 ? "input error" : "input")">
-                    <input type="text" placeholder="Почта" >
-                    <i class="required">*</i>   
+                <div class="@(ViewData.ModelState["City"]?.Errors.Count > 0 ? "input error" : "input")">
+                    <input type="text" placeholder="Город" >
+                </div>
+                <div class="rate">
+                    <div class="text">Оценка </div>
+                    <div>
+                        <img src="~/client/img/fullfilled.png" />
+                        <img src="~/client/img/fullfilled.png" />
+                        <img src="~/client/img/fullfilled.png" />
+                        <img src="~/client/img/fullfilled.png" />
+                        <img src="~/client/img/fullfilled.png" />
+                    </div>
                 </div>
             </div>
+            <div class="area">
+                <textarea placeholder="отзыв"></textarea>
+            </div>
+            <div>
+                <input type="submit" value="Отправить">
+            </div>
+        </div>
     </div>
 </div>
