--- a/KagamaAdmin/Views/Home/Review.cshtml
+++ b/KagamaAdmin/Views/Home/Review.cshtml
@@ -149,8 +149,15 @@
             <div class="area">
                 <textarea placeholder="отзыв"></textarea>
             </div>
+            <div class="fileInput">
+                <label for="file">
+                    <img src="~/client/img/file.png" />
+                    <div>Прикрепите фото</div>
+                </label>
+                <input type="file" id="file" />
+            </div>
             <div>
-                <input type="submit" value="Отправить">
+                <input type="submit" value="Оставить отзыв" style="background-image:none">
             </div>
         </div>
     </div>
