--- a/KagamaAdmin/Areas/cp/Views/Review/Index.cshtml
+++ b/KagamaAdmin/Areas/cp/Views/Review/Index.cshtml
@@ -6,6 +6,17 @@
     {
         <tr>
             <th scope="row">@item.Name</th>
+            <th scope="row">@item.City</th>
+            <th scope="row">@item.Title</th>
+        </tr>
+    }
+</h1>
+<h1>
+    @foreach (var item in Model.Services)
+    {
+        <tr>
+            <th scope="row">@item.Id</th>
+            <th scope="row">@item.Title</th>
         </tr>
     }
 </h1>
