--- a/KagamaAdmin/Views/Home/Review.cshtml
+++ b/KagamaAdmin/Views/Home/Review.cshtml
@@ -2,153 +2,46 @@
 
 
 <div class="reviews-main">
-    
+
     <h1>
-        @foreach (var item in Model.Review)
-                {
-                    <tr>
-                        <th scope="row">@item.Name</th>
-                        <th scope="row">@item.City</th>
-                        <th scope="row">@item.Rating</th>
-                        <th scope="row">@item.Title</th>
-                        <th scope="row">@item.Img</th>
-                    </tr>
-                }
+        отзывы наших заказчиков
     </h1>
-    @* @if (Model.Name.Any()) *@
-    @* { *@
-    @*     foreach (var name in Model.Name) *@
-    @*     { *@
-    @*         <div>@name</div> *@
-    @*     } *@
-    @* } *@
     <div class="reviews">
-        <div class="slide">
-            <div class="info">
-
-                <div class="name">Валерий</div>
-                <div class="city_name">г. Москва</div>
-            </div>
-            <div class="info">
-                <div class="rate">
-                    <img src="~/client/img/fullfilled.png"/>
-                    <img src="~/client/img/fullfilled.png"/>
-                    <img src="~/client/img/fullfilled.png"/>
-                    <img src="~/client/img/fullfilled.png"/>
-                    <img src="~/client/img/empty.png"/>
+        @foreach (var item in Model.Review)
+        {
+            <div class="slide">
+                <div class="info">
+                    <div class="name">@item.Name</div>
+                    <div class="city_name">@item.City</div>
                 </div>
-                <div class="date">20.12.21</div>
-            </div>
-            <div class="description">
-                В феврале – марте 2003 г. в распределительном складском комплексе торговой сети , расположенном по адресу: МО, Балашихинский
-                р-он, г. Железнодорожный, силами ООО «ТэоХим» были выполнены работы по устройству защитного покрытия полов полиуретановой композицией «Элакор-ПУ», площадь – 15 600 м².
-
-                Замечаний по срокам и качеству проводившихся работ нет.
-
-                За истекший период, покрытие «Элакор-ПУ» показало хорошие эксплуатационные свойства.
-
-                Претензий по качеству нет.
-            </div>
-            <div class="image_desc">
-                <img src="~/client/img/desc1.png"/>
-                <img src="~/client/img/desc2.png"/>
-            </div>
-        </div>
-        <div class="slide">
-            <div class="info">
-                <div class="name">Валерий</div>
-                <div class="city_name">г. Москва</div>
-            </div>
-            <div class="info">
-                <div class="rate">
-                    <img src="~/client/img/fullfilled.png"/>
-                    <img src="~/client/img/fullfilled.png"/>
-                    <img src="~/client/img/fullfilled.png"/>
-                    <img src="~/client/img/fullfilled.png"/>
-                    <img src="~/client/img/empty.png"/>
+                <div class="info">
+                    <div class="rate">
+                        <img src="~/client/img/fullfilled.png" />
+                        <img src="~/client/img/fullfilled.png" />
+                        <img src="~/client/img/fullfilled.png" />
+                        <img src="~/client/img/fullfilled.png" />
+                        <img src="~/client/img/empty.png" />
+                    </div>
+                    <div class="date">@item.CreationData.ToString("dd/MM/yyyy")</div>
                 </div>
-                <div class="date">20.12.21</div>
-            </div>
-            <div class="description">
-                В феврале – марте 2003 г. в распределительном складском комплексе торговой сети , расположенном по адресу: МО, Балашихинский
-                р-он, г. Железнодорожный, силами ООО «ТэоХим» были выполнены работы по устройству защитного покрытия полов полиуретановой композицией «Элакор-ПУ», площадь – 15 600 м².
-
-                Замечаний по срокам и качеству проводившихся работ нет.
-
-                За истекший период, покрытие «Элакор-ПУ» показало хорошие эксплуатационные свойства.
-
-                Претензий по качеству нет.
-            </div>
-            <div class="image_desc">
-                <img src="~/client/img/desc1.png"/>
-                <img src="~/client/img/desc2.png"/>
-            </div>
-        </div>
-        <div class="slide">
-            <div class="info">
-                <div class="name">Валерий</div>
-                <div class="city_name">г. Москва</div>
-            </div>
-            <div class="info">
-                <div class="rate">
-                    <img src="~/client/img/fullfilled.png"/>
-                    <img src="~/client/img/fullfilled.png"/>
-                    <img src="~/client/img/fullfilled.png"/>
-                    <img src="~/client/img/fullfilled.png"/>
-                    <img src="~/client/img/empty.png"/>
+                <div class="description">
+                    @item.Title
                 </div>
-                <div class="date">20.12.21</div>
-            </div>
-            <div class="description">
-                В феврале – марте 2003 г. в распределительном складском комплексе торговой сети , расположенном по адресу: МО, Балашихинский
-                р-он, г. Железнодорожный, силами ООО «ТэоХим» были выполнены работы по устройству защитного покрытия полов полиуретановой композицией «Элакор-ПУ», площадь – 15 600 м².
-
-                Замечаний по срокам и качеству проводившихся работ нет.
-
-                За истекший период, покрытие «Элакор-ПУ» показало хорошие эксплуатационные свойства.
-
-                Претензий по качеству нет.
-            </div>
-            <div class="image_desc">
-                <img src="~/client/img/desc1.png"/>
-                <img src="~/client/img/desc2.png"/>
-            </div>
-        </div>
-        <div class="slide">
-            <div class="info">
-                <div class="name">Валерий</div>
-                <div class="city_name">г. Москва</div>
-            </div>
-            <div class="info">
-                <div class="rate">
-                    <img src="~/client/img/fullfilled.png"/>
-                    <img src="~/client/img/fullfilled.png"/>
-                    <img src="~/client/img/fullfilled.png"/>
-                    <img src="~/client/img/fullfilled.png"/>
-                    <img src="~/client/img/empty.png"/>
+                <div class="image_desc">
+                    @if (@item.Img != null)
+                    {
+                        <img src="@item.Img" />
+                        <img src="@item.Img2" />
+                        <img src="@item.Img3" />
+                        <img src="@item.Img4" />
+                    }
                 </div>
-                <div class="date">20.12.21</div>
             </div>
-            <div class="description">
-                В феврале – марте 2003 г. в распределительном складском комплексе торговой сети , расположенном по адресу: МО, Балашихинский
-                р-он, г. Железнодорожный, силами ООО «ТэоХим» были выполнены работы по устройству защитного покрытия полов полиуретановой композицией «Элакор-ПУ», площадь – 15 600 м².
-
-                Замечаний по срокам и качеству проводившихся работ нет.
-
-                За истекший период, покрытие «Элакор-ПУ» показало хорошие эксплуатационные свойства.
-
-                Претензий по качеству нет.
-            </div>
-            <div class="image_desc">
-                <img src="~/client/img/desc1.png"/>
-                <img src="~/client/img/desc2.png"/>
-            </div>
-        </div>
+        }
     </div>
 </div>
 <div id="mainLead2" class="review_page_content main-lead" style="background-color:#E5E5E5">
     <div class="wrapper lead">
-        
         <form class="form" asp-action="ReviewPost" asp-controller="Home" enctype="multipart/form-data">
             <h1>Оставить отзыв</h1>
             <input type="hidden" name="Id" value="@Model.Id">
@@ -158,7 +51,7 @@
                     <i class="required">*</i>
                 </div>
                 <div class="@(ViewData.ModelState["City"]?.Errors.Count > 0 ? "input error" : "input")">
-                    <input type="text" asp-for="City" placeholder="Город" >
+                    <input type="text" asp-for="City" placeholder="Город">
                 </div>
                 <div class="rate">
                     <div class="text">Оценка </div>
@@ -174,19 +67,16 @@
             </div>
             <div class="@(ViewData.ModelState["Title"]?.Errors.Count > 0 ? "area error" : "area")">
                 <textarea cols="30" rows="10" asp-for="Title" placeholder="Отзыв"></textarea>
-                </div>
-            @* <div class="area"> *@
-            @*     <textarea placeholder="отзыв"></textarea> *@
-            @* </div> *@
+            </div>
             <div class="fileInput">
                 <label for="file">
                     <img src="~/client/img/file.png" />
                     <div>Прикрепите фото</div>
                 </label>
-                <input type="file" id="file" multiple name="Images"/>
+                <input type="file" id="file" multiple name="Images" />
             </div>
             <div>
-                <input  type="submit"  value="Оставить отзыв" style="background-image:none">
+                <input type="submit" value="Оставить отзыв" style="background-image:none">
             </div>
         </form>
     </div>
