--- a/KagamaAdmin/wwwroot/cp/css/main.css
+++ b/KagamaAdmin/wwwroot/cp/css/main.css
@@ -4,7 +4,10 @@
   font-weight: normal;
   font-style: normal;
   src: url("../fonts/Montserrat-master/Montserrat-Regular.eot");
-  src: url("../fonts/Montserrat-master/Montserrat-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/Montserrat-master/Montserrat-Regular.woff") format("woff"), url("../fonts/Montserrat-master/Montserrat-Regular.ttf") format("truetype");
+  src: url("../fonts/Montserrat-master/Montserrat-Regular.eot?#iefix")
+      format("embedded-opentype"),
+    url("../fonts/Montserrat-master/Montserrat-Regular.woff") format("woff"),
+    url("../fonts/Montserrat-master/Montserrat-Regular.ttf") format("truetype");
 }
 
 @font-face {
@@ -12,7 +15,10 @@
   font-weight: 300;
   font-style: normal;
   src: url("../fonts/Montserrat-master/Montserrat-Light.eot");
-  src: url("../fonts/Montserrat-master/Montserrat-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/Montserrat-master/Montserrat-Light.woff") format("woff"), url("../fonts/Montserrat-master/Montserrat-Light.ttf") format("truetype");
+  src: url("../fonts/Montserrat-master/Montserrat-Light.eot?#iefix")
+      format("embedded-opentype"),
+    url("../fonts/Montserrat-master/Montserrat-Light.woff") format("woff"),
+    url("../fonts/Montserrat-master/Montserrat-Light.ttf") format("truetype");
 }
 
 @font-face {
@@ -20,7 +26,10 @@
   font-weight: 500;
   font-style: normal;
   src: url("../fonts/Montserrat-master/Montserrat-Medium.eot");
-  src: url("../fonts/Montserrat-master/Montserrat-Medium.eot?#iefix") format("embedded-opentype"), url("../fonts/Montserrat-master/Montserrat-Medium.woff") format("woff"), url("../fonts/Montserrat-master/Montserrat-Medium.ttf") format("truetype");
+  src: url("../fonts/Montserrat-master/Montserrat-Medium.eot?#iefix")
+      format("embedded-opentype"),
+    url("../fonts/Montserrat-master/Montserrat-Medium.woff") format("woff"),
+    url("../fonts/Montserrat-master/Montserrat-Medium.ttf") format("truetype");
 }
 
 @font-face {
@@ -28,7 +37,10 @@
   font-weight: 600;
   font-style: normal;
   src: url("../fonts/Montserrat-master/Montserrat-SemiBold.eot");
-  src: url("../fonts/Montserrat-master/Montserrat-SemiBold.eot?#iefix") format("embedded-opentype"), url("../fonts/Montserrat-master/Montserrat-SemiBold.woff") format("woff"), url("../fonts/Montserrat-master/Montserrat-SemiBold.ttf") format("truetype");
+  src: url("../fonts/Montserrat-master/Montserrat-SemiBold.eot?#iefix")
+      format("embedded-opentype"),
+    url("../fonts/Montserrat-master/Montserrat-SemiBold.woff") format("woff"),
+    url("../fonts/Montserrat-master/Montserrat-SemiBold.ttf") format("truetype");
 }
 
 @font-face {
@@ -36,7 +48,10 @@
   font-weight: 700;
   font-style: normal;
   src: url("../fonts/Montserrat-master/Montserrat-Bold.eot");
-  src: url("../fonts/Montserrat-master/Montserrat-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/Montserrat-master/Montserrat-Bold.woff") format("woff"), url("../fonts/Montserrat-master/Montserrat-Bold.ttf") format("truetype");
+  src: url("../fonts/Montserrat-master/Montserrat-Bold.eot?#iefix")
+      format("embedded-opentype"),
+    url("../fonts/Montserrat-master/Montserrat-Bold.woff") format("woff"),
+    url("../fonts/Montserrat-master/Montserrat-Bold.ttf") format("truetype");
 }
 
 * {
@@ -100,7 +115,8 @@ img {
   max-width: 100%;
 }
 
-ul, ol {
+ul,
+ol {
   list-style: none;
   padding: 0;
   margin: 0;
@@ -111,10 +127,11 @@ p {
   margin: 0;
 }
 
-input, textarea {
+input,
+textarea {
   -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   border-radius: 0;
 }
 
@@ -132,7 +149,10 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
-input, textarea, select, button {
+input,
+textarea,
+select,
+button {
   font-family: "Montserrat";
 }
 
@@ -194,7 +214,8 @@ input, textarea, select, button {
   display: flex;
 }
 
-.checkbox label, .checkbox a {
+.checkbox label,
+.checkbox a {
   display: block;
   cursor: pointer;
   position: relative;
@@ -247,7 +268,7 @@ input, textarea, select, button {
   height: 39px;
   overflow: hidden;
   border-radius: 5px;
-  background-color: #292C34;
+  background-color: #292c34;
 }
 
 .switcher .checkbox {
@@ -262,20 +283,20 @@ input, textarea, select, button {
 }
 
 .switcher .checkbox:checked + .check:before {
-  content: 'Да';
+  content: "Да";
   left: 54px;
   background-color: #5faf85;
 }
 
 .switcher .check {
   z-index: 2;
-  -webkit-transition: .2s ease all;
-  -o-transition: .2s ease all;
-  transition: .2s ease all;
+  -webkit-transition: 0.2s ease all;
+  -o-transition: 0.2s ease all;
+  transition: 0.2s ease all;
 }
 
 .switcher .check:before {
-  content: 'Нет';
+  content: "Нет";
   position: absolute;
   top: 0;
   left: 0;
@@ -287,9 +308,9 @@ input, textarea, select, button {
   line-height: 39px;
   background-color: #5faf85;
   border-radius: 5px;
-  -webkit-transition: all .2s;
-  -o-transition: all .2s;
-  transition: all .2s;
+  -webkit-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
 }
 
 .btn {
@@ -300,24 +321,24 @@ input, textarea, select, button {
   text-align: center;
   border-radius: 30px;
   display: block;
-  -webkit-transition: all .2s;
-  -o-transition: all .2s;
-  transition: all .2s;
+  -webkit-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
 }
 
 .btn.btn-white {
-  background-color: #FFF;
+  background-color: #fff;
   color: red;
 }
 
 .btn.btn-white:hover {
   background-color: red;
-  color: #FFF;
+  color: #fff;
 }
 
 .btn.btn-white:active {
   -webkit-box-shadow: inset 0 0 10px 0 rgba(37, 16, 0, 0.3);
-          box-shadow: inset 0 0 10px 0 rgba(37, 16, 0, 0.3);
+  box-shadow: inset 0 0 10px 0 rgba(37, 16, 0, 0.3);
   background-color: red;
 }
 
@@ -335,13 +356,13 @@ input, textarea, select, button {
 
 .btn.btn-bg:active {
   -webkit-box-shadow: inset 0 0 10px 0 rgba(37, 16, 0, 0.3);
-          box-shadow: inset 0 0 10px 0 rgba(37, 16, 0, 0.3);
+  box-shadow: inset 0 0 10px 0 rgba(37, 16, 0, 0.3);
   background-color: red;
 }
 
 .btn.btn-orange {
   background-color: red;
-  color: #FFF;
+  color: #fff;
 }
 
 .btn.btn-orange:hover {
@@ -350,26 +371,34 @@ input, textarea, select, button {
 
 .btn.btn-orange:active {
   -webkit-box-shadow: inset 0 0 5px 0 rgba(0, 0, 0, 0.3);
-          box-shadow: inset 0 0 5px 0 rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 5px 0 rgba(0, 0, 0, 0.3);
   background-color: red;
 }
 
-.input, .textarea {
+.input,
+.textarea {
   max-width: 660px;
   margin-bottom: 20px;
   position: relative;
 }
 
-.input.w200, .textarea.w200 {
+.input.w200,
+.textarea.w200 {
   max-width: 200px;
 }
 
-.input label, .textarea label {
+.input label,
+.textarea label {
   margin-bottom: 15px;
   display: block;
 }
 
-.input input, .input select, .input textarea, .textarea input, .textarea select, .textarea textarea {
+.input input,
+.input select,
+.input textarea,
+.textarea input,
+.textarea select,
+.textarea textarea {
   width: 100%;
   height: 39px;
   border-radius: 5px;
@@ -377,10 +406,11 @@ input, textarea, select, button {
   background-color: #292c34;
   padding: 0 20px;
   font-size: 14px;
-  color: #FFF;
+  color: #fff;
 }
 
-.input textarea, .textarea textarea {
+.input textarea,
+.textarea textarea {
   padding: 20px;
   max-width: 660px;
   min-width: 660px;
@@ -388,40 +418,45 @@ input, textarea, select, button {
   min-height: 180px;
 }
 
-.input select, .textarea select {
+.input select,
+.textarea select {
   -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   background-image: url("../img/toolbar_arrow.png");
   background-repeat: no-repeat;
   background-position: -webkit-calc(100% - 15px) center;
   background-position: calc(100% - 15px) center;
 }
 
-.input .error, .textarea .error {
+.input .error,
+.textarea .error {
   color: #ff232a;
   font-size: 12px;
   display: block;
 }
 
-.input .flex-input, .textarea .flex-input {
+.input .flex-input,
+.textarea .flex-input {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-align-items: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   margin-bottom: 15px;
 }
 
-.input .flex-input label, .textarea .flex-input label {
+.input .flex-input label,
+.textarea .flex-input label {
   margin-bottom: 0;
   margin-right: 15px;
 }
 
-button, input[type="submit"] {
+button,
+input[type="submit"] {
   border: none;
   padding: 0 14px;
   cursor: pointer;
@@ -455,7 +490,7 @@ body {
 }
 
 .main-wrapper {
-  background-color: #1A1D22;
+  background-color: #1a1d22;
   width: -webkit-calc(100% - 16px);
   width: calc(100% - 16px);
   min-height: -webkit-calc(100vh - 12px);
@@ -472,12 +507,12 @@ header {
   display: flex;
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 header .user-name {
@@ -506,8 +541,8 @@ header .logo-block {
   display: flex;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   border-bottom: 2px solid #393e4d;
   position: relative;
 }
@@ -521,7 +556,7 @@ header .logo-block a {
   width: 118px;
   height: 38px;
   text-align: center;
-  background-color: #1A1D22;
+  background-color: #1a1d22;
 }
 
 header .logo-block a:after {
@@ -548,9 +583,9 @@ header .logo-block a:after {
 
 .toolbar {
   width: 185px;
-  -webkit-transition: all .2s;
-  -o-transition: all .2s;
-  transition: all .2s;
+  -webkit-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
 }
 
 .toolbar .hide-menu {
@@ -561,15 +596,15 @@ header .logo-block a:after {
   display: flex;
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   width: 100%;
   height: 39px;
   border-radius: 5px;
   border: 1px solid #393e4d;
-  -webkit-transition: all .2s;
-  -o-transition: all .2s;
-  transition: all .2s;
+  -webkit-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
   margin-bottom: 35px;
 }
 
@@ -598,8 +633,8 @@ header .logo-block a:after {
   display: flex;
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .toolbar .menu > li a span {
@@ -612,15 +647,15 @@ header .logo-block a:after {
 }
 
 .toolbar .menu > li a img {
-  -webkit-transition: all .2s;
-  -o-transition: all .2s;
-  transition: all .2s;
+  -webkit-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
 }
 
 .toolbar .menu > li a.on img {
   -webkit-transform: rotate(-180deg);
-      -ms-transform: rotate(-180deg);
-          transform: rotate(-180deg);
+  -ms-transform: rotate(-180deg);
+  transform: rotate(-180deg);
 }
 
 .toolbar .menu .img {
@@ -691,9 +726,9 @@ header .logo-block a:after {
   width: -webkit-calc(100% - 185px);
   width: calc(100% - 185px);
   padding-left: 80px;
-  -webkit-transition: all .2s;
-  -o-transition: all .2s;
-  transition: all .2s;
+  -webkit-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
   position: relative;
 }
 
@@ -722,11 +757,11 @@ header .logo-block a:after {
   display: flex;
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-transition: all .2s;
-  -o-transition: all .2s;
-  transition: all .2s;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
 }
 
 .btn-primary.btn-fix {
@@ -759,8 +794,8 @@ header .logo-block a:after {
   display: flex;
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   position: relative;
 }
 
@@ -772,7 +807,8 @@ header .logo-block a:after {
   font-size: 12px;
 }
 
-.filtr-input input, .filtr-input select {
+.filtr-input input,
+.filtr-input select {
   width: 100%;
   height: 39px;
   border-radius: 5px;
@@ -780,13 +816,13 @@ header .logo-block a:after {
   background-color: #393e4d;
   padding: 0 20px;
   font-size: 14px;
-  color: #FFF;
+  color: #fff;
 }
 
 .filtr-input select {
   -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   background-image: url("../img/toolbar_arrow.png");
   background-repeat: no-repeat;
   background-position: -webkit-calc(100% - 15px) center;
@@ -833,8 +869,8 @@ header .logo-block a:after {
 .filtr_arrow_up.filtr_arrow_up svg,
 .filtr_arrow_down.filtr_arrow_up svg {
   -webkit-transform: rotate(180deg);
-      -ms-transform: rotate(180deg);
-          transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 
 .filtr-block {
@@ -844,12 +880,12 @@ header .logo-block a:after {
   display: flex;
   -webkit-align-items: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-justify-content: space-between;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   padding-top: 25px;
   margin-bottom: 30px;
 }
@@ -867,8 +903,8 @@ header .logo-block a:after {
   margin: 0 20px;
   -webkit-box-flex: 1;
   -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -ms-flex: 1;
+  flex: 1;
 }
 
 .filtr-block .filtr-input:first-child {
@@ -878,8 +914,8 @@ header .logo-block a:after {
 .filtr-block .filtr-input.w200 {
   -webkit-box-flex: 0;
   -webkit-flex: 0;
-      -ms-flex: 0;
-          flex: 0;
+  -ms-flex: 0;
+  flex: 0;
 }
 
 .filtr-block .filtr-input.w200 select {
@@ -910,12 +946,12 @@ header .logo-block a:after {
   display: flex;
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-align-items: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   margin-bottom: 12px;
 }
 
@@ -947,19 +983,19 @@ header .logo-block a:after {
   display: flex;
   -webkit-align-items: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-justify-content: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   text-align: center;
   line-height: 32px;
   border: 1px solid #5faf85;
   border-radius: 5px;
-  -webkit-transition: all .2s;
-  -o-transition: all .2s;
-  transition: all .2s;
+  -webkit-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
   font-weight: 600;
 }
 
@@ -986,8 +1022,8 @@ header .logo-block a:after {
   display: flex;
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   margin-bottom: 35px;
 }
 
@@ -1004,15 +1040,15 @@ header .logo-block a:after {
   display: flex;
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   width: 160px;
   height: 39px;
   border-radius: 5px;
   border: 1px solid #393e4d;
-  -webkit-transition: all .2s;
-  -o-transition: all .2s;
-  transition: all .2s;
+  -webkit-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
   margin-right: 20px;
 }
 
@@ -1097,8 +1133,8 @@ header .logo-block a:after {
   display: flex;
   -webkit-align-items: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   margin-bottom: 35px;
 }
 
@@ -1114,7 +1150,8 @@ header .logo-block a:after {
   display: flex;
 }
 
-.flex-button button:first-child, .flex-button input:first-child {
+.flex-button button:first-child,
+.flex-button input:first-child {
   margin-right: 20px;
 }
 
@@ -1150,7 +1187,7 @@ header .logo-block a:after {
   display: block;
   width: 100%;
   height: 1px;
-  background-color: #1A1D22;
+  background-color: #1a1d22;
   position: absolute;
   bottom: -1px;
   left: 0;
@@ -1166,12 +1203,12 @@ header .logo-block a:after {
   display: flex;
   -webkit-align-items: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-justify-content: space-between;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   position: relative;
 }
 
@@ -1198,9 +1235,9 @@ header .logo-block a:after {
   background-color: #5faf85;
   text-align: center;
   line-height: 39px;
-  -webkit-transition: all .2s;
-  -o-transition: all .2s;
-  transition: all .2s;
+  -webkit-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
 }
 
 .fileinput label {
@@ -1218,8 +1255,8 @@ header .logo-block a:after {
   width: 100%;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   cursor: pointer;
 }
 
@@ -1254,17 +1291,18 @@ textarea.cke_source {
   display: flex;
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   padding: 30px 0;
   font-size: 16px;
 }
 
-.pagination-block .pagPrev, .pagination-block .pagNext {
+.pagination-block .pagPrev,
+.pagination-block .pagNext {
   width: 110px;
   height: 42px;
   text-align: center;
@@ -1298,6 +1336,46 @@ textarea.cke_source {
   height: 42px;
   line-height: 42px;
   text-align: center;
+}
+
+.reviews-admin tbody > tr td {
+  text-align: center;
+}
+
+.reviews-admin-img {
+  width: 134px;
+  height: 83px;
+  display: flex;
+  overflow: auto;
+}
+
+.reviews-admin-allow > button {
+  background-color: transparent;
+  border: 1px solid #2cff2c;
+  color: white;
+}
+
+.reviews-admin-allow > button,
+.reviews-admin-cancle > button {
+  padding: 5px;
+  border-radius: 5px;
+  transition: all 200ms;
+  font-weight: 600;
+  font-size: 14px;
+}
+
+.reviews-admin-allow > button:hover {
+  color: #2cff2c;
+}
+
+.reviews-admin-cancle > button {
+  background-color: transparent;
+  border: 1px solid #ff2c2c;
+  color: white;
+}
+
+.reviews-admin-cancle > button:hover {
+  color: #ff2c2c;
 }
 
 @media only screen and (max-width: 1260px) {
